...
                                <constraints>
                                    <constraint firstAttribute="width" constant="256" id="z7f-JR-6IQ"/>
                                </constraints>
                                <segments>
                                    <segment title="$10"/>
                                    <segment title="$20"/>
                                    <segment title="$30"/>
                                    <segment title="$40"/>
                                </segments>
                                <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                            </segmentedControl>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We'll only recommended restaurants with meals in your price range." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstr
                                <rect key="frame" x="45" y="408.5" width="230.5" height="29"/>
...
                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="280" id="hmk-lC-807"/>
                                    <constraint firstAttribute="height" constant="45" id="oqn-ob-VEd"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                <state key="normal" title="Done">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="doneButtonPressed:" destination="TTf-Cn-AhO" eventType="touchUpInside" id="8ZT-XC-VLT"/>
                                </connections>
                            </button>
...
                                <color key="backgroundColor" red="0.12549019607843137" green="0.76078431372549016" blue="0.23921568627450981" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="Yis-8D-iFb"/>
                                    <constraint firstAttribute="width" constant="280" id="dQX-4E-RCK"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                <state key="normal" title="Share this privilege">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="sharePrivilegeButtonPressed:" destination="AB3-lR-DlV" eventType="touchUpInside" id="S1B-Xd-6c8"/>
                                </connections>
                            </button>
...
